😰🏓 Updated with Glitch

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,6 @@
     <h3>Example recent usage:</h3>
     <span>https://letsziggy-freecodecamp-image-search-abstraction-layer.glitch.me/recent</span>
     <h3>Example search usage:</h3>
-    <span>https://letsziggy-freecodecamp-image-search-abstraction-layer.glitch.me/search/&lt;YOUR_SEARCH_TERM_(EG:your%20search%20term)&gt;?offset=&lt;YOUR_OFFSET_AMOUNT_(INTEGER)&gt;</span>
+    <span>https://letsziggy-freecodecamp-image-search-abstraction-layer.glitch.me/search/freecodecamp%20projects?offset=5</span>
   </body>
 </html>
