💾😺 Updated with Glitch

--- a/www/index.html
+++ b/www/index.html
@@ -27,5 +27,8 @@
     <span>https://letsziggy-freecodecamp-image-search-abstraction-layer.glitch.me/search/freecodecamp%20projects?offset=5</span>
     <h3>Example search output:</h3>
     <span>[<br>&nbsp;&nbsp;{<br>&nbsp;&nbsp;&nbsp;&nbsp;"link": "https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg",<br>&nbsp;&nbsp;&nbsp;&nbsp;"context": "https://www.freecodecamp.org/map",<br>&nbsp;&nbsp;&nbsp;&nbsp;"snippet": "A Map to Learn to Code and Become a Software Engineer | freeCodeCamp",<br>&nbsp;&nbsp;&nbsp;&nbsp;"thumbnail": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHz7Y0WCn04q1d3vhBBfQZkdVR_3mGl6irM9MStBNk3wdbuHWmZYDogyig"<br>&nbsp;&nbsp;},<br>&nbsp;&nbsp;...<br>]</span>
+    <div id="footer">
+      <div id="footer-note">Written by <a class="footer-link" href="https://www.freecodecamp.org/letsziggy" target="_blank">LetsZiggy</a> for <a class="footer-link" href="https://www.freecodecamp.org/challenges/image-search-abstraction-layer" target="_blank">FreeCodeCamp Challenge</a>.</div>
+    </div>
   </body>
 </html>
